--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "data-structures-in-js",
-  "version": "1.0.0",
-  "description": "",
-  "scripts": {
-    "start": "nodemon ./src --ext js --exec babel-node"
-  },
-  "dependencies": {},
-  "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.3.4",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.0",
-    "nodemon": "^2.0.2"
-  },
-  "keywords": []
+	"name": "data-structures-in-js",
+	"version": "1.0.0",
+	"description": "",
+	"scripts": {
+		"start": "nodemon ./src --ext js --exec babel-node",
+		"debug": "node --nolazy --inspect-brk=9229 src/index.js"
+	},
+	"dependencies": {},
+	"devDependencies": {
+		"@babel/core": "^7.3.4",
+		"@babel/node": "^7.2.2",
+		"@babel/preset-env": "^7.3.4",
+		"eslint": "^6.8.0",
+		"eslint-config-airbnb": "^18.1.0",
+		"eslint-config-airbnb-base": "^14.1.0",
+		"eslint-config-prettier": "^6.10.1",
+		"eslint-plugin-import": "^2.20.2",
+		"eslint-plugin-jsx-a11y": "^6.2.3",
+		"eslint-plugin-react": "^7.19.0",
+		"eslint-plugin-react-hooks": "^2.5.0",
+		"nodemon": "^2.0.2"
+	},
+	"keywords": []
 }
